--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <li class="unit xs-1 m-1-2 push gutter-quarter">
         <div class="card island-half unit-content-distribute content-fill">
           <img class="img-flex push-1-2" src="images/arsinoitherium.jpg" alt="">
-          <h2 class="giga push-1-2">Arsinoitherium</h2>
-          <p class="kilo push 1-2">Arsinoitherium is an extinct genus mammal that were superficially rhinoceros-like herbivores that lived in northern Africa from 36 to 30 million years ago.</p>
+          <h2 class="giga push-half">Arsinoitherium</h2>
+          <p class="kilo push-half">Arsinoitherium is an extinct genus mammal that were superficially rhinoceros-like herbivores that lived in northern Africa from 36 to 30 million years ago.</p>
           <a class="mega" href="https://en.wikipedia.org/wiki/Arsinoitherium">Learn more about Arsinoitherium</a>
         </div>
       </li>
@@ -26,8 +26,8 @@
       <li class="unit xs-1 m-1-2 push gutter-quarter">
         <div class="card island-half unit-content-distribute content-fill">
           <img class="img-flex push-1-2" src="images/elasmotherium.jpg" alt="">
-          <h2 class="giga push-1-2">Elasmotherium</h2>
-          <p class="kilo push 1-2">Elasmotherium, also known as the Giant Siberian Unicorn, is an extinct genus of rhinoceros endemic to Eurasia during the Late Pliocene through the Pleistocene.</p>
+          <h2 class="giga push-half">Elasmotherium</h2>
+          <p class="kilo push-half">Elasmotherium, also known as the Giant Siberian Unicorn, is an extinct genus of rhinoceros endemic to Eurasia during the Late Pliocene through the Pleistocene.</p>
           <a class="mega" href="https://en.wikipedia.org/wiki/Elasmotherium">Learn more about Elasmotherium</a>
         </div>
       </li>
@@ -35,8 +35,8 @@
       <li class="unit xs-1 m-1-2 push gutter-quarter">
         <div class="card island-half unit-content-distribute content-fill">
           <img class="img-flex push-1-2" src="images/glyptodon.jpg" alt="">
-          <h2 class="giga push-1-2">Glyptodon</h2>
-          <p class="kilo push 1-2">Glyptodon was a large, armored mammal, a relative of armadillos that lived during the Pleistocene epoch.</p>
+          <h2 class="giga push-half">Glyptodon</h2>
+          <p class="kilo push-half">Glyptodon was a large, armored mammal, a relative of armadillos that lived during the Pleistocene epoch.</p>
           <a class="mega" href="https://en.wikipedia.org/wiki/Glyptodon">Learn more about Glyptodon</a>
         </div>
       </li>
@@ -44,8 +44,8 @@
       <li class="unit xs-1 m-1-2 push gutter-quarter">
         <div class="card island-half unit-content-distribute content-fill">
           <img class="img-flex push-1-2" src="images/megatherium.jpg" alt="">
-          <h2 class="giga push-1-2">Megatherium</h2>
-          <p class="kilo push 1-2">Megatherium was a genus of elephant-sized ground sloths endemic to South America that lived from the Early Pliocene to the Pleistocene.</p>
+          <h2 class="giga push-half">Megatherium</h2>
+          <p class="kilo push-half">Megatherium was a genus of elephant-sized ground sloths endemic to South America that lived from the Early Pliocene to the Pleistocene.</p>
           <a class="mega" href="https://en.wikipedia.org/wiki/Megatherium">Learn more about Megatherium</a>
         </div>
       </li>
